refactor(wish): wish를 JPA방식으로 수정